--- a/Cosmos.Metrics/Cosmos.Metrics.csproj
+++ b/Cosmos.Metrics/Cosmos.Metrics.csproj
@@ -1,16 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Authors>Moonrise Software, LLC.</Authors>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>Cosmos CMS Metrics</Title>
+		<Copyright>Copyright, Moonrise Software, LLC.</Copyright>
+		<Description>A metrics package for Cosmos CMS.</Description>
+		<RepositoryUrl>https://github.com/MoonriseSoftwareCalifornia/Cosmos.Metrics</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<IncludeSymbols>True</IncludeSymbols>
+		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+		<Version>1.0.1.1</Version>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.13.2" />
-    <PackageReference Include="Azure.Monitor.Query" Version="1.6.0" />
-    <PackageReference Include="Azure.ResourceManager.Cdn" Version="1.3.1" />
-    <PackageReference Include="Azure.ResourceManager.Monitor" Version="1.3.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Azure.Identity" Version="1.13.2" />
+		<PackageReference Include="Azure.Monitor.Query" Version="1.6.0" />
+		<PackageReference Include="Azure.ResourceManager.Cdn" Version="1.3.1" />
+		<PackageReference Include="Azure.ResourceManager.Monitor" Version="1.3.1" />
+	</ItemGroup>
 
 </Project>
